--- a/online-zoo/pages/main/style-main.scss
+++ b/online-zoo/pages/main/style-main.scss
@@ -20,12 +20,15 @@ $main-font-family-one: 'Roboto', sans-serif;
 .container {
     width: 72.5%;
     margin: 0 auto;
+    @media(min-width: 1601px) {
+        width: 1158px;
+    }
     @media(max-width: 1000px) {
         width: 94%;
     }
     @media(max-width: 640px) {
         width: 93.75%;
-    }  
+    }
 }
 
 
