--- a/online-zoo/assets/styles/components/slider.scss
+++ b/online-zoo/assets/styles/components/slider.scss
@@ -29,18 +29,25 @@
     }
 }
 .slider__visible-cards {
-        overflow: hidden;
-        @media(max-width: 640px) {
-            width: 600px;
-        }
-        @media(max-width: 320px) {
-            width: 320px;
-        }
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    overflow: hidden;
+    padding: 20px;
+    margin: -20px;
+    @media(max-width: 640px) {
+        width: 640px;
     }
+    @media(max-width: 320px) {
+        width: 300px;
+        padding: 0px;
+        margin: 0px;
+    }
+}
 .slider__cards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px 30px;
+    grid-gap: 20px 26px;
     width: 100%;
     @media(max-width: 1000px) {
         grid-gap: 92px 30px;
@@ -113,7 +120,7 @@
                 transition: all 1s ease;
                 @media(max-width: 640px) {
                     font-size: 12.4695px;
-                    line-height: 12px;
+                    line-height: 14px;
                     align-items: center;
                     margin-left: 0px;
                 }
@@ -129,7 +136,7 @@
                 @media(max-width: 640px) {
                     font-size: 11.6901px;
                     margin-bottom: 0px;
-                    line-height: 10px;
+                    line-height: 14px;
                     margin-left: 0px;
                 }
             }
@@ -161,7 +168,7 @@
         }
         &:hover {
             .slider__card-description {
-                background-color: rgba(0, 0, 0, 0.7);;
+                background-color: rgba(0, 0, 0, 0.7);
                 transform: translateY(-50px);
             }
             .slider__card-image {
