--- a/online-zoo/assets/styles/layout/about.scss
+++ b/online-zoo/assets/styles/layout/about.scss
@@ -14,6 +14,11 @@
         background-image: url("../../assets/images/640px/Giant-Panda-640px.jpg");
         background-position: 0px;
     }
+    @media(max-width: 320px) {
+        margin-top: 34px;
+        height: 186.96px;
+        background-size: auto 186.96px;
+    }
 }
 
 .about__container {
@@ -36,12 +41,17 @@
         margin-right: 55px;
     }
     @media(max-width: 640px) {
-        background: url("../../assets/images/640px/Ellipse6-640px.svg") 300px 0px no-repeat;
+        background: url("../../assets/images/640px/Ellipse6-640px.svg") 310px 0px no-repeat;
         top: 43px;
         height: auto;
         width: 458px;
         margin-right: 0px;
         width: 600px;
+    }
+    @media(max-width: 320px) {
+        background: url("../../assets/images/640px/Ellipse6-640px.svg") 153px 0px / 119.09px 119.09px no-repeat;
+        width: 300px;
+        top: 22px;
     }
 }
 .about__inner {
@@ -52,6 +62,9 @@
     }
     @media(max-width: 640px) {
         width: 600px;
+    }
+    @media(max-width: 320px) {
+        width: 300px;
     }
 }
 .about__text {
@@ -79,6 +92,12 @@
         width: 255.64px;
         margin: 39px 0 0 348px;
     }
+    @media(max-width: 320px) {
+        font-size: 28px;
+        line-height: 75%;
+        margin: 18.95px 0 0 172px ;
+        width: 128.13px;
+    }
 }
 .about__button {
     padding: 16px 92px;
@@ -89,7 +108,11 @@
         padding: 18px 92px;
     }
     @media(max-width: 640px) {
-        margin-top: -10px;
+        margin-top: -8px;
+        margin-left: 0px;
+    }
+    @media(max-width: 320px) {
+        margin-top: 63px;
         margin-left: 0px;
     }
 }
