--- a/online-zoo/assets/styles/layout/footer.scss
+++ b/online-zoo/assets/styles/layout/footer.scss
@@ -4,11 +4,26 @@
 }
 .footer__container {
     padding-top: 41px;
+    @media(max-width: 640px) {
+        padding: 14px 0 12px;
+    }
+    @media(max-width: 320px) {
+        display: none;
+    }
+}
+.footer__container_320px {
+    padding: 20px 0;
+    @media(min-width: 321px) {
+        display: none;
+    }
 }
 .footer__row1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-bottom: 36px;
+    @media(max-width: 640px) {
+        margin-bottom: 66px;
+    }
 }
 .footer__subscription {
     justify-self: end;
@@ -48,6 +63,9 @@
     justify-content: space-between;
     align-items: flex-end;
     padding: 44px 0 50px;
+    @media(max-width: 640px) {
+        padding: 0;
+    }
 }
 .social-networks {
     span {
@@ -69,8 +87,15 @@
 
 .social-networks-640px {
     justify-self: end;
+    height: 0;
     @media(min-width: 641px) {
         display: none; 
+    }
+    @media(max-width: 320px) {
+        display: flex; 
+        justify-content: space-between;
+        width: 194px;
+        margin: 30px auto;
     }
 }
 
@@ -78,6 +103,9 @@
     list-style-type: none;
     &:not(:last-child) {
         margin-bottom: 10px;
+        @media(max-width: 640px) {
+            margin-bottom: 20px;
+        }
     }
     a {
         display: flex;
@@ -101,6 +129,10 @@
     @media(max-width: 640px) {
         width: 297px;
     }
+    @media(max-width: 320px) {
+        width: 278px;
+        margin: 0 auto;
+    }
 }
 
 .footer__designed {
@@ -108,6 +140,10 @@
     font-size: 16px;
     line-height: 130%;
     color: #FFFFFF;
+    @media(max-width: 320px) {
+        margin: 30px 0;
+        float: right;
+    }
     .footer__designed-text-1 {
         margin-bottom: 10px;
     }
@@ -171,6 +207,13 @@
     border: solid 1px white;
     border-radius: 2px;
     background: url("../../assets/icons/bamboo.svg") no-repeat 9px 23px;
+    @media(max-width: 320px) {
+        width: 128px;
+        height: 23px;
+        border: none;
+        background-position: 72px -2px;
+        margin: 0 auto;
+    }
     a {
         text-decoration: none;
         color: white;
